--- a/DAY9_01리눅스기초.md
+++ b/DAY9_01리눅스기초.md
@@ -28,3 +28,29 @@
  $systemctl set-default multi-user.target
  
  
+-------
+### 가상화 환경 구축 및 이해
+### 리눅스 배포판 소개
+### 리눅스 설치
+### 리눅스 실행 수준 이해 및 제어
+```bash
+ip a
+uname -a
+cat /etc/*release
+who -r
+pwd
+is
+init [0-9]
+shutdown [-h|-r|-] now
+reboot
+cd
+cp
+vi
+systemctl restart network
+su -student --->exit
+```
+### vi 편집기 사용하기
+### NetworkIP 설정
+
+### 추천 책
+우분투 리눅스
