--- a/Docker/1.Docker기초.md
+++ b/Docker/1.Docker기초.md
@@ -1,7 +1,7 @@
 ## 1. 도커의 기초
 > *도커/쿠버네티스를 활용한 컨테이너 개발 실전입문* 책을 참고하여 요약. 정리한 내용입니다.
 ### 1.1 도커란?
-컨테이너형 가상화 기술을 구현하기 위한 프로덕트. 가상 머신보다 훨씬 가볍게 동작함. 이식성이뛰어남(로컬 머신의 도커 환경에서 실행하던 컨테이너를 다른 서버에 도커 환경으로 배푸가능_
+컨테이너형 가상화 기술을 구현하기 위한 프로덕트. 가상 머신보다 훨씬 가볍게 동작함. 이식성이뛰어남(로컬 머신의 도커 환경에서 실행하던 컨테이너를 다른 서버에 도커 환경으로 배포가능.
 * 운연하려는 서비스가 리눅스 환경일때 적합. 애플리케이션 배포 목적으로 특화되어있음
 
 ### 1.2 도커의 기본 개념
@@ -22,7 +22,7 @@ server
 ## 2. 로컬환경(window)에서 도커환경 구축하기
 ### 2.1 윈도우에 도커 설치
 - [도커홈페이지](https://hub.docker.com/)에 회원 가입 후 설치파일 다운로드 및 실행
-- hiper-v활성화 상태 어쩌구 나오면 oK 누르면 컴퓨터 저ㅐ부팅 됨
+- hiper-v활성화 상태 어쩌구 나오면 oK 누르면 컴퓨터 재부팅 됨
 - 도커 아이콘 마우스 오른쪽 클릭 + Setting 클릭
     - shared Divice C드라이브 클릭해야 윈도우와 컨테이너 사이 마운트가 됨
     - 이때 윈도우 사용자 로그인 비번을 설정해줘야 함.
@@ -33,10 +33,66 @@ server
           docker image 등등
 
 ### 2.3 도커 컨테이너 배포
-도커 이미지 다운
+
+1. 도커 이미지 다운
+```
 $ docker pull centos
-도커이미지 파일로 컨테이너 실행
+$ docker image ls
+$ docker images
+```
+2. 도커이미지 파일로 컨테이너 실행
+```
 $ docker run --name test -d -p 8080:8080 centos
-컨테이너가 정상 실행됐는지 확인
+```
+3. 컨테이너가 정상 실행됐는지 확인
+```
 $ docker ps
-> test 컨테이너가 실행됨을 확인
+```
+4. 생성된 test컨테이너에 쉘 접속해보기
+```
+$ docker exec -it test(컨데이너이름 또는 ID) sh
+```
+5. 생성된 컨테이너 중지. 재시작
+```
+$ docker stop test(컨테이너이름 또는 ID)
+$ docker restart test
+## 실행중인 모든 컨테이너 중지
+$ docker stop $(docker ps -q)
+```
+6. 생성된 컨테이너 삭제
+```
+$ docker container rm test(컨테이너이름 또는 ID)
+(위 명령어에서 container 생략 가능)
+# 모든 컨테이너 삭제
+$ docker container rm  $(docker ps -qa)
+```
+
+### 2.4 도커 이미지 생성 및 배포
+1. Dockerfile 생성 - 이름이 다르면(대소문자 구분) 이미지파일이 정상적으로 생성되지 않는다.
+2. Dockerfile에 아래 내용 입력
+```Dockerfile
+FROM mongo
+
+CMD ["mongo"]
+
+```
+- hub.docker에서 mongo 이미지를 다운 받아서 설치후 콘솔에서 mongo를 실행하라는 의미
+
+3. 파워쉘에서 Dockerfile이 있는 위치로 이동
+```
+$ docker build -t startmongo:last
+```
+4. 이미지가 정상적으로 생성되었는지 확인
+```
+$ docker images
+```
+5. 해당 이미지로 컨테이너 run(create+start)
+```
+$ docker run --name mymongo -d -p 27017:27017 startmongo:last
+```
+6. 컨테이너 들어가서 몽고디비 제대로 설치되어있는지 확인
+```
+$ docker exec -it mymongo sh
+```
+
+
