--- a/Docker/1.Docker기초.md
+++ b/Docker/1.Docker기초.md
@@ -80,7 +80,7 @@ CMD ["mongo"]
 
 3. 파워쉘에서 Dockerfile이 있는 위치로 이동
 ```
-$ docker build -t startmongo:last
+$ docker build -t startmongo:last .
 ```
 4. 이미지가 정상적으로 생성되었는지 확인
 ```
