--- a/Docker/2. 도커로 몽고디비 레플리카셋 설치하기.md
+++ b/Docker/2. 도커로 몽고디비 레플리카셋 설치하기.md
@@ -2,19 +2,35 @@
 ### 1.1 레플리카셋 스크립트를 돌릴 mongodb_repl_setup:latest서버 이미지 만들기
 
 #### 1.1.1 Dockerfile 파일을 만들어 아래와 내용 쓰기
-```Docker
+```Dockerfile
 FROM mongo
 #RUN 
 RUN mkdir -p /usr/src/configs
 WORKDIR /usr/src/configs
 COPY replicaSet.js .
-#COPY setup.sh .
 
-#CMD ["./setup.sh"]
 CMD ["mongo", "mongodb://mongo1:27017", "replicaSet.js"]
 ```
 #### 1.1.2 Dockerfile 빌드해서 이미지 파일 생성
 ```bash
+$ docker build -t mongodb_repl_setup:latest .
+```
+### 1.1.3 setup컨테이너에서 실행할 replicaSet.js 파일 생성
+```js
+config ={
+    _id: "myapp",
+    members:[
+        {_id:0, host: "mongo1:27017"},
+        {_id:1, host: "mongo2:27017"},
+        {_id:2, host: "mongo3:27017"}
+    ]
+};
+
+rs.initiate(config);
+rs.conf();
+```
+### 1.1.4 Dockerfile 이미지 생성
+```
 $ docker build -t mongodb_repl_setup:latest .
 ```
 #### 1.2 docker-compose.yml파일 생성하기
@@ -28,7 +44,7 @@ services:
         ports:
             - "27017:27017"
         volumes:
-            - /mongoRepl/mongo1:/data/db
+            - $HOME/mongoRepl/mongo1:/data/db
         networks:
             - mongo-networks
         command: mongod --replSet myapp --bind_ip_all
@@ -38,7 +54,7 @@ services:
         ports:
             - "37017:27017"
         volumes: 
-            - /mongoRepl/mongo2:/data/db
+            - $HOME/mongoRepl/mongo2:/data/db
         depends_on: 
             - mongo1
         networks:
@@ -50,7 +66,7 @@ services:
         ports:
             - "47017:27017"
         volumes: 
-            - /mongoRepl/mongo3:/data/db
+            - $HOME/mongoRepl/mongo3:/data/db
         depends_on: 
             - mongo2
         networks:
@@ -58,10 +74,7 @@ services:
         command: mongod --replSet myapp --bind_ip_all
 
     mongo_setup:
-        #build: . 
         image: "mongodb_repl_setup:latest"
-        ports:
-            - "57017:27017"
         depends_on: 
             - mongo3
         networks:
@@ -73,19 +86,99 @@ networks:
 ```
 #### 1.2.2 파일 내용 설명
 띄어쓰기 등 맞지 않으면 에러나니 오타 확인 필수!
-```
+```yml
+#services밑에만들 컨테이너 설정
 services:
     #컨테이너 이름 
     mongo1:
         #컨테이너에 설치할 기본 이미지 파일
         image: "mongo"
+        #클라이언트에서 접속할포드:서비스포트포워딩
         ports:
             - "27017:27017"
+        #도커 shared에서 설정한 드라이브 기준으로 :컨테이너 저장소 마운트
         volumes:
-            - /mongoRepl/mongo1:/data/db
+            - $HOME/mongoRepl/mongo1:/data/db
+        #네트워크 생성 후 직접 할당
         networks:
             - mongo-networks
+        #컨테이너에서 실행될 명령어 및 
         command: mongod --replSet myapp --bind_ip_all
+        #아래 컨테이너가 설치된 후 현재 컨테이너 설치 하는 옵션
+        depends_on: 
+            - mongotest
+            
+
+#네트워크 설정
+networks:
+    #mongo-networks 란 이름의 네트워크 생성
+    mongo-networks:
+        driver: bridge
+
 ```
 
+### 1.3 docker에 mongo-networks이름 네트워크 생성
+```bash
+$ docker network create mongo-networks
+$ docker network ls
+```
 
+### 1.4 docker-compose up 하기
+```
+$ docker-compose up
+$ docker ps
+```
+- 몽고디비 클러스터 컨테이너 3개가 정상적으로 실행됐는지 확인
+- mongo_setup 컨테이너는 replicaSet.js 실행시킨 후 종료됨
+### 2. 몽고디비 정상 작동하는지 확인해보기
+#### 2.1 몽고디비 서버 접속
+```
+$ docker exec -it mongo1 sh
+# mongo
+> rs.isMaster();
+```
+
+```
+$ docker exec -it mongo2 sh
+# mongo
+> rs.isMaster();
+> rs.slaveOk();
+```
+```
+$ docker exec -it mongo2 sh
+# mongo
+> rs.isMaster();
+> rs.slaveOk();
+```
+### 2.2 몽고디비 레플리카셋 정상 작동하는지 확인
+
+#### 2.2.1 마스터 컨테이너 종료해보기
+```
+$ docker stop mongo1
+
+```
+#### 2.2.2 슬레이브서버중 하나가 Primary 로 승격된걸 확인
+```
+$ docker exec -it mongo2 sh
+# mongo
+> rs.isMaster();
+
+```
+```
+$ docker exec -it mongo2 sh
+# mongo
+> rs.isMaster();
+```
+
+#### 2.2.3 마스터 컨테이너 재시작해보기
+
+```
+$ docker start mongo1
+
+```
+mongo1 서버가 slave서버로 다시 기동됨을 
+```
+$ docker exec -it mongo1 sh
+# mongo
+> rs.isMaster();
+```
