Update 3.다중컨테이너 관리_Swarm 설치.md

--- a/Docker/3.다중컨테이너 관리_Swarm 설치.md
+++ b/Docker/3.다중컨테이너 관리_Swarm 설치.md
@@ -123,3 +123,8 @@ $ docker exec -it worker01 docker ps
 manager 80:8080-> 
 echo 서비스 :8080
 
+
+#### 참고. yml파일로 stack 배포하는 명령어 
+```
+$ docker stack deploy -c /stack/visualizer.yml visualizer
+```
