Update 3.다중컨테이너 관리_Swarm 설치.md

--- a/Docker/3.다중컨테이너 관리_Swarm 설치.md
+++ b/Docker/3.다중컨테이너 관리_Swarm 설치.md
@@ -96,7 +96,7 @@ $ docker-compose up
 
 ### 2.4 manager 컨테이너 들어가서 스웜 init
 ```
-$ docker exec -it manager docker init
+$ docker exec -it manager docker swarm init
 ```
 ### 2.5 위 명령어로 나온 토큰이 포함된 명령어를 나머지 worker01~03에 실행
 ```
