--- a/모듈/1.ERD.md
+++ b/모듈/1.ERD.md
@@ -30,10 +30,10 @@ A car brought in for service can be worked on by many mechanics, and each mechan
 ### (E) 1.2 고객
 - ID, 이름, 연락처
 ### (E) 1.3 자동차
-- ID, 차종, 번호, 신차여부, 색깔, 옵션 등..
+- ID, 차종, 번호, 가격, 신차여부, 판매여부, 색깔, 옵션 등..
 ### (E) 1.4 정비공
 - ID, 이름, 소속대리점, 전화번호, ...
 ### (R) 1.5 송장
-- ID, 영업사원ID, 고객ID, 자동차ID, 판매일, ...
+- ID, 영업사원ID, 고객ID, 자동차ID, , 판매일, ...
 ### (R) 1.6 서비스티켓
-- ID, 정비공ID, 고객ID, 차 반입일, 차 반출일, 부품여부, ... 
+- ID, 정비공ID, 고객ID, 수리비, 차 반입일, 차 반출일, 부품여부, ... 
