--- a/모듈/1.ERD.md
+++ b/모듈/1.ERD.md
@@ -34,6 +34,23 @@ A car brought in for service can be worked on by many mechanics, and each mechan
 ### (E) 1.4 정비공
 - ID, 이름, 소속대리점, 전화번호, ...
 ### (R) 1.5 송장
-- ID, 영업사원ID, 고객ID, 자동차ID, , 판매일, ...
+- ID, 영업사원ID, 고객ID, 자동차ID, 가격, 계약일, 인수일,  ...
 ### (R) 1.6 서비스티켓
-- ID, 정비공ID, 고객ID, 수리비, 차 반입일, 차 반출일, 부품여부, ... 
+- ID, 고객ID, 정비공ID, 수리비, 차 반입일, 차 반출일, 사용부품, ... 
+
+## 2. 논리스키마
+### 2.1 영업 사원
+- dealer(**id**, name, agency, phone)
+### 2.2 고객
+- customer(**id**, name, phone)
+### 2.3 제품(자동차)
+- car(**id**, name, price, isused, color, options)
+
+### 2.4 정비공
+- mechanic(**id**, name, phone)
+
+### 2.5 송장
+- invoice(**id**, *dealer_id*, *cutomer_id*, *car_id*, price, contract_date, acquisition_date)
+
+### 2.6 서비스티켓
+- serviceticket(**id**, *customer_id*, *mechanic_id*, cost, import_date, export_date, part)
