--- a/모듈/1.ERD.md
+++ b/모듈/1.ERD.md
@@ -43,7 +43,7 @@ A car brought in for service can be worked on by many mechanics, and each mechan
 - dealer(**id**, name, agency, phone)
 ### 2.2 고객
 - customer(**id**, name, phone)
-### 2.3 제품(자동차)
+### 2.3 자동차
 - car(**id**, name, price, isused, color, options)
 
 ### 2.4 정비공
