--- a/모듈/1.ERD.md
+++ b/모듈/1.ERD.md
@@ -40,7 +40,7 @@ A car brought in for service can be worked on by many mechanics, and each mechan
 
 ## 2. 논리스키마
 ### 2.1 영업 사원
-- dealer(**id**, name, agency, phone)
+- dealer(**id**, name, *agency_id*, phone)
 ### 2.2 고객
 - customer(**id**, name, phone)
 ### 2.3 자동차
