--- a/모듈/1.ERD.md
+++ b/모듈/1.ERD.md
@@ -44,7 +44,7 @@ A car brought in for service can be worked on by many mechanics, and each mechan
 ### 2.2 고객
 - customer(**id**, name, phone)
 ### 2.3 자동차
-- car(**id**, name, price, isused, color, options)
+- car(**id**, name, price, isused, color, options, soldout)
 
 ### 2.4 정비공
 - mechanic(**id**, name, phone)
